# rol

./: Cargo.toml  FAQ.md  Makefile  README.md  examples.md  lrol-cli.md  lrol-parser.md  rol-schema.md  rol-vs-others.md  schema.json
Crates/lrol_analyzer/: Cargo.toml
Crates/lrol_analyzer/src/: analyzer.rs  error.rs  lib.rs  validator.rs
Crates/lrol_cli/: Cargo.toml
Crates/lrol_cli/src/: analyzer_functions.rs  main.rs  types.rs
Crates/lrol_parser/: Cargo.toml
Crates/lrol_parser/src/: error.rs  lib.rs  parser.rs  types.rs
Guide/: 1. introduction.md  2. rule-structure.md  3. writing-rol.md  5. usecases.md  6. recommended-best-practices.md  auth-stream-access.md  card-payment-fraud.md  evaluation-types.md  introduction.md  rule-structure.md  writing-rol.md
