[package]
name = "lrol_cli"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja"]

[dependencies]
tempfile = {workspace = true}
anyhow ={ workspace = true}
serde_json={workspace = true}
lrol_parser = {path = "../lrol_parser"}
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
thiserror = "1.0"
